--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>React webová aplikace</title>
+    <title>Positive Choice</title>
   </head>
   <body>
     <div id="app"></div>
